# SPDX-License-Identifier: AGPL-3.0-or-later
find_package(GTest CONFIG REQUIRED)
include(GoogleTest)

if(Boost_FOUND)
  add_executable(test_CLI test_CLI.cpp)
  set_target_properties(test_CLI PROPERTIES LINKER_LANGUAGE CXX)
  target_link_libraries(test_CLI PRIVATE GTest::gtest_main damask_c_test ${CMAKE_Fortran_IMPLICIT_LINK_LIBRARIES})
  gtest_discover_tests(test_CLI TEST_PREFIX "cli." DISCOVERY_MODE PRE_TEST)

  add_executable(test_VTI test_VTI.cpp)
  set_target_properties(test_VTI PROPERTIES LINKER_LANGUAGE CXX)
  add_library(VTI_C STATIC ../../src/grid/VTI.cpp)
  target_compile_definitions(VTI_C PUBLIC BOOST)
  find_package(ZLIB QUIET)
  if(ZLIB_FOUND)
    target_link_libraries(VTI_C PRIVATE ZLIB::ZLIB)
  else()
    target_link_libraries(VTI_C PRIVATE ${PETSC_LIBRARIES} ${PETSC_EXTERNAL_LIB})
  endif()
  target_link_libraries(test_VTI PRIVATE GTest::gtest_main VTI_C ${CMAKE_Fortran_IMPLICIT_LINK_LIBRARIES} Boost::boost)
  gtest_discover_tests(test_VTI TEST_PREFIX "vti." DISCOVERY_MODE PRE_TEST)
endif()
